@@ -2,6 +2,7 @@
  - Fix test.
  - Fix test dependencies.
  - Improve SEE ALSO section in doc.
+ - Move author tests to xt/ directory.
  - Remove diacritics from author name in Makefile.PL.
  - Update Module::Install to 1.16 version.
 
